2006-04-11 Scott Dattalo <scott@dattalo.com>
	* gui/gui_src.h, gui/gui_src_asm.cc: Right-button mouse clicks now
	bring up a menu. Currently, not all of the menu items are
	supported. Furthermore, only GtkTextTag'd text responds. 

2006-04-11 Roy Rankin <rrankin@ihug.com.au>
	* src/p16f87x.cc: if code read with breadboard closed, breadboard
	  did not show processor.
	* src/pic-ioports.cc: fix portb does not show high inputs if register
	  bits cleared from assembler code.
	* regression/rt.sh: allow multiple tests in one directory
	* regression/run_regression.sh: run comparator tests seperatly  
	* src/comparator.cc: cleanup compiler warnings

2006-04-08 Scott Dattalo <scott@dattalo.com>
	* cli/scan.cc: removed from SVN. This autogenerated by flex from
	scan.ll. 

2006-04-09 Borut Razem <borut.razem@siol.net>
	* extras/graphic_lcd/utils/custom.png,
	  extras/graphic_lcd/utils/fontimage.png,
	  extras/graphic_lcd/utils/gpsim1.png,
	  extras/graphic_lcd/utils/konqueror.png,
	  extras/graphic_lcd/utils/konqueror16X16.png,
	  extras/graphic_lcd/utils/konqueror3.png: mime-type image/png
	* src/src.vcproj, src/makefile.mingw:
	  new files src/comparator.h src/comparator.cc
	* gui/gui_menu.cc, gui/gui_profile.cc, gui/gui_regwin.cc,
	  gui/gui_src_asm.cc, gui/gui_watch.cc, modules/logic.cc,
	  modules/resistor.cc, modules/switch.cc, modules/usart.cc,
	  src/dspic/dspic-registers.cc, src/intcon.cc, src/ioports.cc,
	  src/pic-instructions.cc:
	  removed unused variables, #if 0-ed unused functions
	  removed warnings:
	    XXXX.h: In constructor `xxxx':
	    XXXX.h:LLL: warning: `yyyy' will be initialized after
	    XXXX.h:LLL: warning:   `zzzz'
	    XXXX.cc:LLL: warning:   when initialized here

2006-04-08 Scott Dattalo <scott@dattalo.com>
	* ChangeLog: experimental SVN checkin.

2006-04-08 Scott Dattalo <scott@dattalo.com>
	* INSTALL: re-instated - somehow it got wiped out on 04-05
	* ltconfig, missing, mkinstalldirs, stamp-h.in: removed from CVS.
